# gentoo-wsl-config

./: README.rst  meson.build  meson.options  oobe.sh  terminal-profile.json  wsl-distribution.conf.in  wsl.conf.in
.githooks/: pre-commit
